# ML-models

./: .gitignore  README.md  k_means.py  knn.py  linear_regression.py  logistic_regression.py  main.py  naive_bayes.py  perceptron.py  polynomial_regression.py  pyproject.toml  simple_neural_network.py  softmax_regression.py  svm.py  test.py
src/py_basic_ml/: __init__.py
src/py_basic_ml/cluster/: k_means.py
src/py_basic_ml/linear_model/: linear_regression.py  perceptron.py
