[project]
name = "py-basic-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "weecici", email = "cc03102005@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
